k8s/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-public-proxy
  namespace: ${NAMESPACE}
  labels:
    app: immich-public-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-public-proxy
  template:
    metadata:
      labels:
        app: immich-public-proxy
    spec:
      containers:
        - name: immich-public-proxy
          image: ghcr.io/alangrainger/immich-public-proxy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /share/healthcheck
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /share/healthcheck
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
